--- a/frontend/src/app/components/join/join.component.scss
+++ b/frontend/src/app/components/join/join.component.scss
@@ -10,7 +10,7 @@
 .card {
     display: block;
     width: 100%;
-    max-width: 18rem;
+    max-width: 25rem;
     margin: 0 auto;
     padding: 2rem 1.5rem 1.5rem;
 }
@@ -24,23 +24,26 @@ button {
     text-transform: uppercase;
 }
 
-.actions {
-    margin: 0;
-    display: flex;
-    flex-direction: column;
+.join-actions {
+    margin-top: 1rem;
 
-    > button {
-        display: block;
-        margin: 0.2rem 0;
+    > div {
+        background-color: #f2f2f2;
+        padding: 1rem 1.5rem;
+        margin: 0.5rem -1.5rem;
+
+        > button {
+            width: 8rem;
+            margin-left: 0;
+            margin-bottom: 0.8rem;
+        }
+
+        > p {
+            margin: 0;
+        }
     }
-
 }
 
-.extra-actions {
-    margin-top: 1.5rem;
-
-}
-
-.text-center {
-    text-align: center;
+.b {
+    font-weight: 500;
 }
